--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
     font-size: 25px;
 }
 
-#pallet {
+.title {
     text-align: center;
     font-weight: 300;
     font-size: 20px;
@@ -21,7 +21,7 @@
     font-size: 17px;
     height: 650px;
     width: 140px;
-    float: left;
+    float:left;
 }
 
 .props button {
@@ -50,7 +50,7 @@
     border: 1px solid grey;
     float: left;
     cursor: crosshair;
-    width: 85%;
+    width: 70%;
     height: 650px;
 }
 
